Code clenup